automatically backed up by learn

--- a/test.html
+++ b/test.html
@@ -6,13 +6,13 @@
   <body>
       <a-scene>
         <a-assests>
-          <a-asset-item id="pizza" src="thin_crust_pepperoni_pizza/scene.gltf" ></a-asset-item>
+          <a-asset-item id="pizza" src="assets/scene.gltf" ></a-asset-item>
         </a-assests>
 
       <a-entity>
-          <a-sky color="black"></a-sky>
+          <!--<a-sky color="#pizza"></a-sky>-->
           <a-plane position="0 0 -3.5" rotation="-90 0 0" width="4" height="2" color="white"></a-plane>
-          <a-ring color="teal" position="0 0 -3.5" rotation="-90 0 0" width="4" height="2" ></a-ring>
+          <!--<a-ring color="teal" position="0 0 -3.5" rotation="-90 0 0" width="4" height="2" ></a-ring>-->
       </a-entity>
 
         <a-entity>
